CRDL-382 Initial set up done for ref data acceptance tests

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -17,36 +17,48 @@ environment: local
 local {
   services {
     host: "http://localhost"
-    service-name-frontend {
-      port: 1234
-      productionRoute: "/path"
+    crdl-cache {
+      port: 7252
+      productionRoute: "/crdl-cache/test-only"
     }
+    emcs-tfe-reference-data {
+          port: 8321
+          productionRoute: "/emcs-tfe-reference-data"
+        }
+    test-only {
+      port: 8321
+      productionRoute: "/emcs-tfe-reference-data/test-only"
   }
+      auth-login-api {
+        port: 8585
+        productionRoute: "/government-gateway/session/login"
+    }
+}
 }
 
 dev {
   services {
-    host: "https://www.development.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
+    host: "place-holder"
+    emcs-tfe-reference-data {
+      productionRoute: "/emcs-tfe-reference-data"
     }
   }
 }
 
 qa {
   services {
-    host: "https://www.qa.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
+    host: "place-holder"
+    emcs-tfe-reference-data {
+      productionRoute: "/emcs-tfe-reference-data"
     }
   }
 }
 
 staging {
   services {
-    host: "https://www.staging.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
+    host: "place-holder"
+    emcs-tfe-reference-data {
+      productionRoute: "/emcs-tfe-reference-data"
     }
   }
 }
